  because Getopt::Long ignores option case by default.  This fixes the problem
  by passing the no_ignore_case config parameter to Getopt::Long.

* If the flypge SpecialSub returned a non-existent SKU then a blank flypage
  would be displayed (with no data).  This is now fixed so that there is no
  difference to what happens without a SpecialSub.

Payment
-------

* Added PaypalExpress payment module from Lyn St George <info@zolotek.net>.

* Removed long-defunct BoA (Bank of America) payment module. Bank of America
  is a reseller for CyberSource so its module applies:
  http://www.bankofamerica.com/small_business/merchant_card_processing/index.cfm?template=internet_e_commerce

* Removed long-defunct CyberCash payment module.

* Added changes from Bill Carr <bill@bottlenose-wine.com> to
  Business::OnlinePayment to allow extra parameters to be passed.

* [pay-cert] tag now uses the new adjust_time() function instead of the older
  time_to_seconds().

* Remove CVV2 (Card Security Code) from default credit card encrypted block
  template so that it will not even be stored in encrypted form. This makes
  the default behavior compliant with section 3.2.2 of PCI-DSS 1.2:

  https://www.pcisecuritystandards.org/security_standards/download.html?id=pci_dss_v1-2.pdf

  It is of course still possible to manually supply a template that stores
  the card security code in violation of PCI-DSS requirements, so developers
  should review any custom credit card encryption templates to make sure that
  the CVV2 is not included, and purge it from any historical data.

* Send correct level 2 card data with AuthorizeNet module. This improves the
  discount rate for a lot of card types.

UserTag
-------

* [run-profile] now accepts ref attribute to check an arbitrary hash.

* Added empty attribute for [convert-date] to display a custom string
  instead of the current date when no proper date is passed.

* [component], [convert-date] and [css] now use the new adjust_time() function