@@ -131,6 +131,9 @@ Core
   would be displayed (with no data).  This is now fixed so that there is no
   difference to what happens without a SpecialSub.
 
+* New area_page SpecialSub that allows you to change the page name passed to the
+  [area] tag before the tag processes the page name.
+
 Payment
 -------
 
